V1.5.1 Fix version checking issues Clean-up in EnchantmentUtils